manifests/app-b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: app-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
      - name: app-b
        image: traefik/whoami
        ports:
        - containerPort: 80
