manifests/app-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b
  namespace: app-b
spec:
  selector:
    app: app-b
  ports:
    - port: 80
      targetPort: 80
