manifests/app-b/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-b
  namespace: app-b
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - app-b.localhost
  rules:
    - backendRefs:
        - name: app-b
          port: 80
